test/end-to-end/compile-errors/call-should-use-syntax.crow
main void()
	xs string mut[] = "hello", "world"
	_ nat? = xs for-break x => break 0
	_ = ("a",)::string? force
	_ string[] = xs for-loop x => x reverse
	_ string[] = new
	_ string[] = "hello" new
	_ string[] = "hello" new "world"
	_ = xs.is-empty not
	xs set-subscript 0, "goodbye"
	_ = xs subscript 0
	_ void^ = parallel with-block () => ()
	()
